# Manana

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  run_ablation.py  run_baseline.py  run_comparison.py  run_evaluation.py  run_pipeline.py
agents/: __init__.py  base.py  diagnostician.py  epileptologist.py  formulary.py  orchestrator.py  pediatrician.py  pharmacologist.py  registry.py  treatment_analyst.py  tropical_medicine.py
baseline/: __init__.py  predict.py
classical/: data.py  extract.py  extract_features.txt  freq_baseline.py  train.py
configs/: jsonl_example.yaml  mimic.yaml  uganda_anon.yaml  uganda_example.yaml
consilium/: __init__.py  ablation.py  debate.py  loader.py  pipeline.py  run.py
core/: __init__.py  debate.py  pipeline.py
data/: loader.py
data_adapters/: __init__.py  jsonl.py
epipick/: evaluate.py  extract.py  run.py
evaluation/: __init__.py  ablation.py  disagreement.py  error_detection.py  grader.py  trace_quality.py
extraction/: evaluate.py  extract_visits.py  loader.py  run_baseline.py  run_pipeline.py
feedback/: Eval-Raj.csv  doctor_eval.md
lib/: __init__.py  grader.py  llm.py  output.py  patient.py  regimen_parser.py  responses.py
llm/: __init__.py  client.py
manana/: config.py  datasets.py  evaluate.py  prompts.py  run.py  score.py
mimic/: MIMIC.md  MIMIC_results.md  README.md  __init__.py  clean.py  export_cases.py  extract_features.py  filter.py  gt.py  loader.py  sample_note.md  sampler.py
notes/: ARCHITECTURE.md  BUGS.md  DISCUSSION_2026-04-06.md  (+21 more)
(+192 files in other folders)
