[project]
name = "consilium"
version = "0.1.0"
description = "Multi-agent LLM system for epilepsy drug prediction"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "schemas", "llm", "evaluation", "baseline", "data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
